--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -6,3 +6,8 @@ spring.datasource.username=root
 spring.datasource.url=jdbc:mysql://localhost:3306/mydb
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+
+
+management.endpoint.health.show-details=ALWAYS
+management.endpoints.web.exposure.include=*
+management.endpoint.beans.enabled=true
