--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,7 @@ server.port=8090
 logging.level.demo.example.blogspring.BlogSpringApplication=debug
 
 spring.profiles.active=production
+
+spring.security.user.name=kyaw
+spring.security.user.password=password
+
