db loader and basic form

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,5 @@ spring.profiles.active=production
 
 spring.security.user.name=kyaw
 spring.security.user.password=password
+spring.security.user.roles=ADMIN
 
