--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ logging.level.demo.example.blogspring.BlogSpringApplication=debug
 
 spring.profiles.active=production
 
-spring.security.user.name=kyaw
-spring.security.user.password=password
-spring.security.user.roles=ADMIN
+#spring.security.user.name=kyaw
+#spring.security.user.password=password
+#spring.security.user.roles=ADMIN
 
