sign out sign in

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.profiles.active=production
 #spring.security.user.password=password
 #spring.security.user.roles=ADMIN
 
+spring.thymeleaf.cache=false
+
